<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".RegisterActivity">

    <!-- Botão de voltar -->
    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:background="@drawable/circle_background"
        android:contentDescription="@string/botao_de_voltar"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/bem_vindo"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:background="@drawable/input_background"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="8dp"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/icone_email_login"
                android:src="@drawable/ic_email" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/endere_o_de_email"
                    android:textColor="#B3515151"
                    android:textSize="12sp"
                    tools:ignore="TextSizeCheck,TextContrastCheck" />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="endereço de email"
                    android:background="@android:color/transparent"
                    android:hint="@string/email_email_com"
                    android:inputType="textEmailAddress"
                    android:maxLength="40"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:background="@drawable/input_background"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="8dp"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/icone_email"
                android:src="@drawable/ic_senha" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/senha"
                    android:textColor="#B3515151"
                    android:textSize="12sp"
                    tools:ignore="TextSizeCheck,TextContrastCheck" />

                <EditText
                    android:id="@+id/senha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="endereço de email"
                    android:background="@android:color/transparent"
                    android:gravity="bottom"
                    android:hint="@string/hint_senha"
                    android:inputType="textPassword"
                    android:maxLength="12"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:text="@string/esqueci_a_senha"
        android:textColor="@color/blue"
        android:textSize="14sp"
        tools:ignore="TextContrastCheck" />

    <ImageButton
        android:id="@+id/toLogin"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/botao_de_login"
        android:scaleType="fitCenter"
        android:src="@drawable/log_button"
        tools:ignore="ImageContrastCheck" />

</LinearLayout>