<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".RegisterActivity">

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:background="@drawable/circle_background"
        android:contentDescription="@string/botao_de_voltar"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/cadastre_se_para_continuar"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:autofillHints="Meu nome"
            android:background="@drawable/input_background"
            android:drawableStart="@drawable/ic_perfil"
            android:drawablePadding="8dp"
            android:hint="@string/nome"
            android:inputType="textPersonName"
            android:maxLength="40"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:autofillHints="Seu email"
            android:background="@drawable/input_background"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="8dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLength="40"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />

        <EditText
            android:id="@+id/senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:autofillHints="Sua senha"
            android:background="@drawable/input_background"
            android:drawableStart="@drawable/ic_senha"
            android:drawablePadding="8dp"
            android:hint="@string/senha"
            android:inputType="textPassword"
            android:maxLength="12"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/toRegister"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="30dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/botao_de_cadastrar"
        android:scaleType="fitCenter"
        android:src="@drawable/cad_button" />

</LinearLayout>