<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:id="@+id/fragment_perfil"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:singleLine="true"
            android:text="@string/nome_do_usuario"
            android:textAlignment="center"
            android:textSize="18sp" />

        <!-- Profile Picture -->
        <ImageView
            android:id="@+id/profile_picture"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_marginTop="35dp"
            android:contentDescription="@string/foto_de_perfil"
            android:src="@drawable/ic_perfil" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/alterar_foto"
                android:textSize="18sp" />

            <ImageButton
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="16dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/alterar_foto"
                android:src="@drawable/ic_check" />
        </LinearLayout>

        <EditText
            android:id="@+id/edit_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/novo_username"
            android:layout_marginTop="25dp"
            android:padding="10dp"
            android:textSize="18sp"/>

        <Button
            android:id="@+id/alterar_username_button"
            style="@style/CustomButtonStyle"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:background="@drawable/button_background"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/alterar_nome_de_usuario"
            android:textColor="#6A6A6A"
            android:textSize="18sp" />

        <Button
            android:id="@+id/delete_user"
            style="@style/CustomButtonStyle"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:background="@drawable/button_background"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/excluir_conta"
            android:textColor="#6A6A6A"
            android:textSize="18sp" />

    </LinearLayout>

</FrameLayout>