<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Launch"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LaunchActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="154dp"
            android:layout_height="90dp"
            android:layout_gravity="start"
            android:contentDescription="@string/logo"
            android:scaleType="fitCenter"
            android:src="@drawable/splash_icon" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:text="@string/minha_cidade"
            android:textAlignment="center"
            android:textSize="24sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="80dp"
        android:fontFamily="@font/sansita"
        android:gravity="center"
        android:text="@string/slogan"
        android:textAlignment="center"
        android:textSize="28sp"
        android:textStyle="italic|bold"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/background_image"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <ImageButton
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="30dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/botao_de_cadastrar"
            android:scaleType="fitCenter"
            android:src="@drawable/cad_button" />

        <ImageButton
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="15dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/botao_de_cadastrar"
            android:scaleType="fitCenter"
            android:src="@drawable/login_button_launch" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="15dp"
            android:text="@string/termos_nota"
            android:textAlignment="center"
            android:textSize="11sp" />
    </LinearLayout>

    <ImageView
        android:contentDescription="@string/desc_oceano"
        android:id="@+id/background_image"
        android:layout_width="0dp"
        android:layout_height="170dp"
        android:background="@android:color/transparent"
        android:scaleType="centerCrop"
        android:src="@drawable/bonitinha"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>