<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="15dp"
        android:layout_gravity="center"
        tools:ignore="UselessParent">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            android:background="@color/primaryColor"
            android:layout_gravity="center">

            <ImageButton
                android:layout_width="251dp"
                android:layout_height="251dp"
                android:src="@drawable/ic_default_image"
                android:contentDescription="@string/add_image_adicionar"/>
        </androidx.cardview.widget.CardView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:background="@drawable/rounded_edit_text"
            android:padding="12dp">

            <ImageView
                android:id="@+id/icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/icone_alerta"
                android:src="@drawable/ic_alert" />

            <EditText
                android:inputType="text"
                android:id="@+id/edit_text"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:layout_toEndOf="@id/icon"
                android:layout_marginStart="8dp"
                android:autofillHints="Acidente de carro"
                android:hint="@string/descreva_o_que_aconteceu"
                android:background="@android:color/transparent"
                android:padding="5dp"
                android:gravity="top|start"
                android:textSize="16sp"
                android:maxLength="120"
                android:textColor="#000000" />

        </RelativeLayout>
    </LinearLayout>
</FrameLayout>